--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.3.0",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.0.0",
     "gulp-uglify-es": "^3.0.0",
     "sass": "^1.38.0"
